<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Less</string>
    <string name="search_apps">Search apps</string>
    <string name="drawer_close">Close Drawer</string>
    <string name="open_settings">Open Settings</string>
    <string name="settings">Settings</string>
    <string name="settings_close">Close Settings</string>
    <string name="settings_drawer_opens">Drawer opens</string>
    <string name="settings_swipe_up">Swipe up</string>
    <string name="settings_swipe_down">Swipe down</string>
    <string name="settings_home_alignment">Home alignment</string>
    <string name="settings_home_alignment_left">Left</string>
    <string name="settings_home_alignment_centred">Centred</string>
    <string name="settings_keyboard">Keyboard</string>
    <string name="settings_open_keyboard_with_drawer">Open keyboard with Drawer</string>
    <string name="settings_on">On</string>
    <string name="settings_off">Off</string>
    <string name="settings_favorites">Favorites</string>
    <string name="settings_favorites_empty">None yet. Long-press an app in the Drawer to pin one.</string>
    <string name="settings_hidden_apps">Hidden apps</string>
    <string name="settings_hidden_apps_empty">None hidden. Long-press an app in the Drawer to hide one.</string>
    <string name="settings_themes">Themes</string>
    <string name="settings_icon_mode">Icon Mode</string>
    <string name="settings_icon_mode_theme">Theme default</string>
    <string name="settings_icon_mode_off">Off</string>
    <string name="settings_icon_mode_tinted">Tinted</string>
    <string name="settings_icon_mode_original">Original</string>
    <string name="favorite_pin">Pin to Home</string>
    <string name="favorite_unpin">Unpin from Home</string>
    <string name="favorite_rename">Rename</string>
    <string name="tombstone_dismiss">Dismiss Tombstone</string>
    <string name="app_hide">Hide</string>
    <string name="app_unhide">Unhide %1$s</string>
    <string name="app_info">App info</string>
    <string name="app_uninstall">Uninstall</string>
    <string name="notice_dismiss">Got it</string>
    <string name="clock_unavailable">No clock app answers on this phone.</string>
    <string name="calendar_unavailable">No calendar app answers on this phone.</string>
    <string name="uninstall_unavailable">Nothing on this phone can uninstall that app.</string>
    <string name="rename_title">Name %1$s on Home</string>
    <string name="rename_name">Name for %1$s</string>
    <string name="rename_save">Save</string>
    <string name="favorites_soft_cap">More than %1$d Favorites. Home takes them and starts to scroll.</string>
    <string name="favorites_move_up">Move %1$s up</string>
    <string name="favorites_move_down">Move %1$s down</string>
    <string name="favorites_unpin">Unpin %1$s</string>
    <string name="setup_theme_title">Pick a look</string>
    <string name="setup_theme_explanation">Six themes, each built on a public-domain work. You can change this later in Settings.</string>
    <string name="setup_home_role_title">Make Less your launcher</string>
    <string name="setup_home_role_explanation">Less opens when you press home. Nothing else changes.</string>
    <string name="setup_home_role_request">Set Less as default</string>
    <string name="setup_home_role_held">Less is your launcher.</string>
    <string name="setup_favorites_title">Choose your Favorites</string>
    <string name="setup_favorites_explanation">These go on Home. Long-press an app in the Drawer to add more later.</string>
    <string name="setup_favorites_empty">No apps to choose from yet.</string>
    <string name="setup_continue">Continue</string>
    <string name="setup_back">Back</string>
    <string name="setup_finish">Done</string>
    <string name="drawer_home_role_prompt">Make Less your default launcher</string>
</resources>
